--- a/src/Bot/Bot/Bot.csproj
+++ b/src/Bot/Bot/Bot.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Alexa.NET" Version="1.5.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="MySql.Data" Version="8.0.13" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.13" />
   </ItemGroup>
 
 </Project>
