Reduce log output

--- a/src/Bot/Bot/appsettings.Development.json
+++ b/src/Bot/Bot/appsettings.Development.json
@@ -3,14 +3,10 @@
     "IncludeScopes": false,
     "Console": {
       "LogLevel": {
-        "Default": "Trace"
+        "Default": "Trace",
+        "System": "Information",
+        "Microsoft": "Information"
       }
-    },
-    "LogLevel": {
-      "Default": "Trace",
-      "System": "Information",
-      "Microsoft": "Information",
-      "WomPlatform": "Trace"
     }
   }
 }
